# modern-python-template

./: .pre-commit-config.yaml  .ruff.toml  AGENTS.md  Dockerfile  LICENSE  README.md  copier.yml  mise.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: lint-strategy.md  other-modern-python-tools.md
docs/superpowers/specs/: 2026-07-07-copier-template-design.md
scripts/: answers-defaults.yml  answers-everything-off.yml  answers-everything-on.yml  test-generation.sh  test-render-contracts.sh
src/ai_template/: main.py
template/: .gitignore  .pre-commit-config.yaml.jinja  .pytest.ini.jinja  .python-version.jinja  .ruff.toml.jinja  AGENTS.md.jinja  Dockerfile.jinja  README.md.jinja  mise.toml.jinja  pyproject.toml.jinja  taplo.toml  {% if "markdownlint" in extra_linters %}.markdownlint-cli2.jsonc{% endif %}.jinja  {% if 'markdownlint' in extra_linters %}.markdownlint-cli2.jsonc{% endif %}.jinja  {% if license != 'Proprietary' %}LICENSE{% endif %}.jinja  {% if use_docker %}.dockerignore{% endif %}.jinja  {% if use_docker %}Dockerfile{% endif %}.jinja
template/scripts/: example.sh
template/src/{{ package_name }}/: __init__.py
template/tests/unit/: __init__.py
template/tests/unit/{{ package_name }}/: test_main.py.jinja
template/{% if use_github_actions %}.github{% endif %}/workflows/: ci.yml.jinja
tests/: __init__.py  test_hook_tooling_config.py  test_smoke.py
tests/fixtures/: answers-defaults.yml  answers-everything-off.yml  answers-everything-on.yml  answers-github-actions-no-docker.yml
tests/unit/ai_template/: test_main.py
(+1 files in other folders)
