[project]
name = "ai-template"
version = "0.1.0"
description = "Project description"
requires-python = ">=3.14"
license = "MIT"
dependencies = []

[dependency-groups]
dev = [
  # Linting & formatting
  "ruff",
  "ty",
  "flake8",
  "flake8-pydantic",
  "flake8-async",
  "vulture",
  "bandit",
  # Testing
  "pytest",
  "pytest-xdist",
  # Git hooks
  "prek",
  # YAML linting
  "yamllint",
  # JSON schema validation
  "check-jsonschema",
  "pytest-cov>=7.1.0",
]

# No [build-system]: uv treats this as a virtual project (deps only, the
# project itself is not built or installed). Restore hatchling + a wheel
# target once src/ gains a real package.

[tool.ty.environment]
python-version = "3.14"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
# Raise once the project grows real code:
# fail_under = 80
